@@ -4,6 +4,7 @@
 - Improved: Lock current screen orientation while camera scanner frame is visible (#358)
 - Improved: Camera scanner frame now has a fixed size (#334)
 - Improved: Updated translations
+- Fixed: Filter didn't work on master data products page (#370)
 - Fixed: Don't show inactive products on consume & purchase page (#382)
 - Fixed: 'Add' button was gone in shopping lists bottom sheet
 
